navy foci and some air foci locs

--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -180,9 +180,9 @@
  AVA_panchaian_tungsten:0 "Panchaian Tungsten"
  AVA_panchaian_tungsten_desc:0 "All advanced technology requires this incrediby hard, incredibly heat resistant element: Tungsten."
  AVA_learning_civil_war:0 "Civil War Lessons"
- AVA_learning_civil_war_desc:0 "SSSSS"
+ AVA_learning_civil_war_desc:0 "The Civil war has shown us the fallices and flaws of our military strategy and our army, we should work on reforming our military to improve our ability to keep the country safe"
  AVA_reform_army:0 "Reform the Army"
- AVA_reform_army_desc:0 "SSSSS"
+ AVA_reform_army_desc:0 "The Army is woefully outdated, using outdated weapons and artillery. We need to reform military doctrine and weaponry in order to keep our sovereignty"
  AVA_firepower:0 "Firepower Focus"
  AVA_firepower_desc:0 "SSSSS"
  AVA_infantry:0 "Infantry Advancements"
@@ -204,35 +204,35 @@
  AVA_spec_ops:0 "Special Operations"
  AVA_spec_ops_desc:0 "SSSSS"
  AVA_reform_navy:0 "Naval Reforms"
- AVA_reform_navy_desc:0 "SSSSS"
+ AVA_reform_navy_desc:0 "Much of our navy was destroyed or damaged in the civil war, we need to rebuild our naval fleet in order to protect our waters and prevent any of our enemies from landing soldiers on our shores."
  AVA_purchase_british_ships:0 "Purchase British Ships"
- AVA_purchase_british_ships_desc:0 "SSSSS"
+ AVA_purchase_british_ships_desc:0 "We can never hope to meet the stopgap created by the civil war, luckily the British have many old ships, perhaps we can purchace some from them to jumpstart our attempts."
  AVA_fleet_being:0 "Fleet in Being Doctrine"
- AVA_fleet_being_desc:0 "SSSSS"
+ AVA_fleet_being_desc:0 "Having a large fleet is imposing, having the largest guns is powerful. By combining these two ideas, we can create a navy that the entire Lemurian ocean will fear."
  AVA_destroyer:0 "Destroyer Focus"
- AVA_destroyer_desc:0 "SSSSS"
+ AVA_destroyer_desc:0 "Destroyers are the backbone of any fleet, being multirole ships capable of just about anything we need. We should invest in them to ensure our larger ships can be well defended.
  AVA_battleship:0 "Battleship Focus"
- AVA_battleship_desc:0 "SSSSS"
+ AVA_battleship_desc:0 "Some in command say Battleships are becoming outdated, but in the Lemurian ocean the largest fleets only consist of cruisers, having Battleships will put the power of the region back into our hands."
  AVA_purchase_american_ships:0 "Purchase American Ships"
- AVA_purchase_american_ships_desc:0 "SSSSS"
+ AVA_purchase_american_ships_desc:0 "America has many old ships they wish to retire, we should purchase them so they dont go to waste."
  AVA_base_strike:0 "Base Strike Doctrine"
- AVA_base_strike_desc:0 "SSSSS"
+ AVA_base_strike_desc:0 "The future is naval combat is not on the sea but in the air, we must invest in carriers and carrier planes to destroy our enemies' before they even leave their ports."
  AVA_battlecruiser:0 "Battlecruiser Focus"
- AVA_battlecruiser_desc:0 "SSSSS"
+ AVA_battlecruiser_desc:0 "A majestic combination of hulking battleships and agile cruisers, battlecruisers may serve a niche role, but they can be wonderful for fleets that may not need a battleship but still need a larger vessel.
  AVA_purchase_italian_ships:0 "Purchase Italian Ships"
- AVA_purchase_italian_ships_desc:0 "SSSSS"
+ AVA_purchase_italian_ships_desc:0 "Italy has produced many ships since the
  AVA_trade_war:0 "Trade War Doctrine"
- AVA_trade_war_desc:0 "SSSSS"
+ AVA_trade_war_desc:0 "The Lemurian ocean is vital in global trade, by investing in small, fast fleets we can catch enemy ships off gaurd and destroy them, starving our enemies no matter how far they are."
  AVA_cruiser:0 "Cruiser Focus"
- AVA_cruiser_desc:0 "SSSSS"
+ AVA_cruiser_desc:0 "Cruisers are a vital part of any naval fleet big or small, they are large enough to hold their own in combat and small enough to retreat if needed, investing in them will help us strike enemies with minimal losses."
  AVA_submarine:0 "Submarine Focus"
- AVA_submarine_desc:0 "SSSSS"
+ AVA_submarine_desc:0 "The ability to hide and attack our enemies from the shadows is a great advantage in sea warfare, investing in these submarines will help us defend our fleets and destroy others."
  AVA_reform_air:0 "Reform Air Force"
- AVA_reform_air_desc:0 "SSSSS"
+ AVA_reform_air_desc:0 "Many in military high command feel that wars will no longer be won with the size our naval ships or the manpower of our army, but by the support of the airforce. We should take into consideration what they said and make sure our air force is ready to keep our other forces safe."
  AVA_strategic_destruction:0 "Strategic Destruction"
- AVA_strategic_destruction_desc:0 "SSSSS"
+ AVA_strategic_destruction_desc:0 "Destroying the enemy completly is the best way to ensure they wont be able to fight in a war with us, by targeting their cities and infastructure we can knock them out of the war without ever having to step foot on their land."
  AVA_battlefield_support:0 "Battlefield Support"
- AVA_battlefield_support_desc:0 "SSSSS"
+ AVA_battlefield_support_desc:0 "Whilst the airforce may be essential in winning future conflicts, our army is still needed on the ground to engage the enemy directly, we should focus our air force on supporting our boots on the ground."
  AVA_operational_integrity:0 "Operational Integrity"
  AVA_operational_integrity_desc:0 "SSSSS"
  AVA_large_aircraft:0 "Large Airframe Focus"
