--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1992,3 +1992,18 @@
  KKA_monarchism_ADJ:0 "Kandam"
  KKA_mandalism_ADJ:0 "Kandam"
  KKA_islamist_ADJ:0 "Kandam"
+ KAS_fascism:0 "Empire of Kashvan"
+ KAS_fascism_DEF:0 "the Empire of Kashvan"
+ KAS_democratic:0 "Republic of Kashvan"
+ KAS_democratic_DEF:0 "the Republic of Kashvan"
+ KAS_neutrality:0 "Kashvan"
+ KAS_neutrality_DEF:0 "Kashvan"
+ KAS_monarchism:0 "Kingdom of Kashvan"
+ KAS_monarchism_DEF:0 "the Kingdom of Kashvan"
+ KAS_communism:0 "Socialiast Peoples Republic of Kashvan"
+ KAS_communism_DEF:0 "the Socialist Peoples Republic of Kashvan"
+ KAS_fascism_ADJ:0 "Kashvan"
+ KAS_democratic_ADJ:0 "Kashvan"
+ KAS_neutrality_ADJ:0 "Kashvan"
+ KAS_communism_ADJ:0 "Kashvan"
+ KAS_monarchism_ADJ:0 "Kashvan"
