--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -37,6 +37,29 @@
  AVA_navy_screen_2:0 "Jamshid Davalien"
  AVA_navy_anti_submarine_1:0 "Kurosh Dupattewala"
  AVA_pomare_hehekia:0 "Baktash Khot"
+ 
+ #Ideas
+ ava_conspiring_chaos:0 "Conspired Chaos"
+ ava_conspiring_chaos_desc:0 "TBA"
+ ava_labor_union:0 "Labor Union"
+ ava_labor_union_desc_desc:0 "TBA"
+ ava_new_fiat_currency "Fiat Currency"
+ ava_new_fiat_currency_desc:0 "Money Printer go Burr, Inflation is pain"
+ ava_gold_transfer:0 "Gold for Land"
+ ava_gold_transfer_desc:0 "The economic costs of suddenly integrating our old lands must be paid"
+ ava_azadeh_opposition:0 "Azadeh Opposition"
+ ava_azadeh_opposition_desc:0 "TBH"
+ ava_edibam_resistance:0 "Edibam Resistance"
+ ava_edibam_resistance_desc:0 "TBH
+ ava_muzumdar_resistance:0 "Muzumdar Resistance"
+ ava_muzumdar_resistance_desc:0 "TBH"
+ ava_mazdakist_union:0 "Mazdikist Union"
+ ava_mazdakist_union_desc:0 "Monarchical Socialist Blend"
+ ava_green_king:0 "Green King"
+ ava_green_king_desc:0 "Parhviz was never ment to be king and his lack of knowlage of even basic royal Functions shows, this will be a rude wake up call for the 22 year old"
+ 
+ 
+ 
  #COMMUNISM EVENT
  ava.1.t:0 "Mainland or War" #FRANCE GETS the Eventc
  ava.1.d:0 "Long Ignoble Speach or something"
@@ -117,7 +140,7 @@
  AVA_mainland_industry_desc:0 "With the mainland reclaimed, we can finally industrialize further let our economy flourish"
  AVA_british_research_university:0 "British Research University"
  AVA_british_research_university_desc:0 "Our population is sorely uneducated and illiterate, but by sending our best and brightest minds into a think tank with the british, we may be able to change that quite quickly.
- AVA_muzumdar_house:0 "Victory for Roya
+ AVA_muzumdar_house:0 "Victory for Roya"
  AVA_muzumdar_house_desc:0 "'Roya, the heiress apparent to the throne, has secured victory over the interlopers that tried to steal the crown away from her. Using her naval forces and superior artillery, she has secured the surrender of her brother, the Houses, and many of the socialists. With our true Monarch in charge, the only future for Avahya is looking bright. All hail the Shahbanu.'
  AVA_purge_azadeh:0 "Purge House Azadeh"
  AVA_purge_azadeh_desc:0 "The Azadeh house was the main supporter of Parviz and his rebellion, whilst Parviz is long gone, many members of the Azadeh house remain, we must get rid of them to ensure the stability of the monarchy."
@@ -142,7 +165,7 @@
  AVA_princess_of_persia:0 "Princess of Persia"
  AVA_princess_of_persia_desc:0 "It is finally time, we shall reclaim our homeland from the Muslim infidels, Persia is a Zoroastrian land, It is time for the world to remember what the Persian Empire once was."
  AVA_azadeh_house:0 "Azadeh Victory"
- AVA_azadeh_house_desc:0 "'In a daring move that has shocked militaries around the world, Parviz and the Azadeh house have emerged victorious from battle. Using paratroopers, Parviz made the bold move to paratroop onto the ships being used by Roya's forces, succeding in capturing most of them, the ensuing naval battle removed all of Roya's firepower swiftly, with some final daring maneuvers in the mountains and city, Roya has been captured and the majority of the house's leaders surrendered awaiting judgement. The only loose end that remains are the socialists.
+ AVA_azadeh_house_desc:0 "'In a daring move that has shocked militaries around the world, Parviz and the Azadeh house have emerged victorious from battle. Using paratroopers, Parviz made the bold move to paratroop onto the ships being used by Roya's forces, succeding in capturing most of them, the ensuing naval battle removed all of Roya's firepower swiftly, with some final daring maneuvers in the mountains and city, Roya has been captured and the majority of the house's leaders surrendered awaiting judgement. The only loose end that remains are the socialists."
  AVA_purge_muzumdar:0 "Purge House Muzumdar"
  AVA_purge_muzumdar_desc:0 "The Muzumdar house were supporters of Roya, whilst some of them have exiled to Yohannia many still reside in the country, we need to get rid of them to ensure the saftey of the Shah"
  AVA_purge_edibam_m:0 "Purge House Edibam"
