--- a/localisation/KAS_l_english.yml
+++ b/localisation/KAS_l_english.yml
@@ -62,30 +62,65 @@
  KAS_nuclear_scientist:0 "Odri Kreezunrith"
  KAS_rocket_scientist:0 "Uklesi Crerle"
  
- KAS.1.t:0 "Stip or War" #FRANCE GETS the Eventc
- KAS.1.d:0 "Long Ignoble Speach or something"
- KAS.1.a:0 "Kash Demand France Land" #France Accepts
- KAS.1.b:0 "Kash Demand France Land" #France Refuses
- KAS.2.t:0 "France Gives Strip" #KAsh GETS the Eventc
- KAS.2.d:0 "Long speach or sumthin"
- KAS.2.a:0 "Good we didnt want to fight"
- KAS.4.t:0 "France Refuses" #KAsh GETS the Eventc
- KAS.4.d:0 "We meet on the field of battle or sumthing"
- KAS.4.a:0 "Nothing like a little violence cant solve"
+ kas.1.t:0 "Stip or War" #FRANCE GETS the Eventc
+ kas.1.d:0 "Long Ignoble Speach or something"
+ kas.1.a:0 "kash Demand France Land" #France Accepts
+ kas.1.b:0 "Kash Demand France Land" #France Refuses
+ kas.2.t:0 "France Gives Strip" #KAsh GETS the Eventc
+ kas.2.d:0 "Long speach or sumthin"
+ kas.2.a:0 "Good we didnt want to fight"
+ kas.4.t:0 "France Refuses" #KAsh GETS the Eventc
+ kas.4.d:0 "We meet on the field of battle or sumthing"
+ kas.4.a:0 "Nothing like a little violence cant solve"
  
- KAS.6.t:0 "Vassal or war" #Aka GETS the Eventc
- KAS.6.d:0 "Long Ignoble Speach or something"
- KAS.6.a:0 "Kash Demand Aka Land" #AkaAka Accepts
- KAS.6.b:0 "Kash Demand Aka Land" #Aka Refuses
- KAS.8.t:0 "Aka is  vassalized" #KAsh GETS the Eventc
- KAS.8.d:0 "Long speach or sumthin"
- KAS.8.a:0 "Good we didnt want to fight"
- KAS.10.t:0 "Aka Refuses" #KAsh GETS the Eventc
- KAS.10.d:0 "We meet on the field of battle or sumthing"
- KAS.10.a:0 "Nothing like a little violence cant solve"
+ kas.6.t:0 "Vassal or war" #Aka GETS the Eventc
+ kas.6.d:0 "Long Ignoble Speach or something"
+ kas.6.a:0 "Kash Demand Aka Land" #AkaAka Accepts
+ kas.6.b:0 "Kash Demand Aka Land" #Aka Refuses
+ kas.8.t:0 "Aka is  vassalized" #KAsh GETS the Eventc
+ kas.8.d:0 "Long speach or sumthin"
+ kas.8.a:0 "Good we didnt want to fight"
+ kas.10.t:0 "Aka Refuses" #KAsh GETS the Eventc
+ kas.10.d:0 "We meet on the field of battle or sumthing"
+ kas.10.a:0 "Nothing like a little violence cant solve"
  
- KAS.20.t:0 "Language Reforms" #KAsh GETS the Eventc
- KAS.20.d:0 "We have two main Languages Similar to eachother"
- KAS.20.a:0 "Is it wrong to have two?" #Canon
- KAS.20.b:0 "Koba" 
- KAS.20.c:0 "Mace" 
+ kas.20.t:0 "Language Reforms" #KAsh GETS the Eventc
+ kas.20.d:0 "We have two main Languages Similar to eachother"
+ kas.20.a:0 "Is it wrong to have two?" #Canon
+ kas.20.b:0 "Koba" 
+ kas.20.c:0 "Mace" 
+ #Ideas
+ kas_recently_unified_1:0 "Recently Unified"
+ kas_recently_unified_1_desc:0 "TBD"
+ kas_recently_unified_dem_com:0"Unified People Nation"
+ kas_recently_unified_dem_com_desc:0 "TBD"
+ kas_equal_language_idea:0 "Official Languages Act 1938" 
+ kas_equal_language_idea_desc:0 "The Official Languages Act is a Kashvani law that came into force on September 9, 1938, which gives Kobalashiv and Macehautle equal status in the government of Kashvan. This makes them "official" languages, having preferred status in law over all other languages. Although the Official Languages Act is not the only piece of federal language law, it is the legislative keystone of Kashvan official bilingualism. Both languages are equal in Kashvan's government and in all the services it controls, such as the courts."
+ kas_railway_standard_idea:0 "Railway Integration Act 1937"
+ kas_railway_standard_idea_desc:0 "The Railway Integration Act 1937 is a Decree the Great Leader, that was designed to standardise railway tracks.  It mandated that the track gauge – which was the distance between the two running rails' inner faces 1,372 mm aka Four foot six inch to be the standard for Kasvan and for all railways to be converted to such. to beter integrate into each other as a compromise between Kobalashivs 1000mm Gauge and Macealashivi 1520mm."
+ kas_confederated_union:0 "Confederated Union"
+ kas_confederated_union_desc:0 "TBH"
+ kas_recently_unified_fac_oli:0 "Unified Military Comisart"
+ kas_recently_unified_fac_oli_desc:0 "TBD"
+ kas_german_construction_engineers:0 "German Construction Advisers"
+ kas_german_construction_engineers_desc:0 "TBH"
+ kas_nationalized_workforce:0 "Conscripted Workforce"
+ kas_nationalized_workforce_desc:0 "An Alternative for Military Service is to be drafted for National Work Projects"
+ kas_combined_legislature:0 "Combined Legislature"
+ kas_combined_legislature_desc:0 "TBD"
+ kas_road_maintenence:0 "Road Construction"
+ kas_road_maintenence_desc:0 "TBD"
+ kas_national_railway:0 "Railway Integration Act 1937"
+ kas_national_railway_desc:0 "The Railway Integration Act 1937 is a Decree the Great Leader, that was designed to standardise railway tracks.  It mandated that the track gauge – which was the distance between the two running rails' inner faces 1,372 mm aka Four foot six inch to be the standard for Kasvan and for all railways to be converted to such. to beter integrate into each other as a compromise between Kobalashivs 1000mm Gauge and Macealashivi 1520mm."
+ kas_primary_research:0 "Mandatory Primary School"
+ kas_primary_research_desc:0 "TBD"
+ kas_military_research:0 "Military Design Bureau"
+ kas_military_research_desc:0 "TBD"
+ kas_doctrine_research:0"Doctrine Drills"
+ kas_doctrine_research_desc:0 "TBD"
+ kas_planning_research:0 "Planning Speed"
+ kas_planning_research_desc:0 "TBD"
+ kas_recovery_research:0 "Improved Medics"
+ kas_recovery_research_desc:0 "TBD"
+ kas_trade_school_efficiency:0 "Trade Schools"
+ kas_trade_school_efficiency_desc:0 "Wonder science is meaningless if we dont have the people trained to actually build it"
