--- a/localisation/KBS_l_english.yml
+++ b/localisation/KBS_l_english.yml
@@ -79,3 +79,38 @@
  kbs.20.a:0 "Is it wrong to have two?" #Canon
  kbs.20.b:0 "Koba" 
  kbs.20.c:0 "Mace" 
+#Ideas
+kbs_recently_unified_1:0 "Recently Unified"
+kbs_recently_unified_1_desc:0 "TBD"
+kbs_recently_unified_dem_com:0"Unified People Nation"
+kbs_recently_unified_dem_com_desc:0 "TBD"
+kbs_equal_language_idea:0 "Official Languages Act 1938" 
+kbs_equal_language_idea_desc:0 "The Official Languages Act is a Kashvani law that came into force on September 9, 1938, which gives Kobalashiv and Macehautle equal status in the government of Kashvan. This makes them "official" languages, having preferred status in law over all other languages. Although the Official Languages Act is not the only piece of federal language law, it is the legislative keystone of Kashvan official bilingualism. Both languages are equal in Kashvan's government and in all the services it controls, such as the courts."
+kbs_railway_standard_idea:0 "Railway Integration Act 1937"
+kbs_railway_standard_idea_desc:0 "The Railway Integration Act 1937 is a Decree the Great Leader, that was designed to standardise railway tracks.  It mandated that the track gauge – which was the distance between the two running rails' inner faces – of 4 feet 81⁄2 inches to be the standard for Great Britain and 5 feet 3 inches to be the standard for Ireland.
+kbs_confederated_union:0
+kbs_confederated_union_desc:0
+kbs_recently_unified_fac_oli:0
+kbs_recently_unified_fac_oli_desc:0
+kbs_german_construction_engineers:0
+kbs_german_construction_engineers_desc:0
+kbs_nationalized_workforce:0
+kbs_nationalized_workforce_desc:0
+kbs_combined_legislature:0
+kbs_combined_legislature_desc:0
+kbs_road_maintenence:0
+kbs_road_maintenence_desc:0
+kbs_national_railway:0
+kbs_national_railway_desc:0
+kbs_primary_research:0
+kbs_primary_research_desc:0
+kbs_military_research:0
+kbs_military_research_desc:0
+kbs_doctrine_research:0
+kbs_doctrine_research_desc:0
+kbs_planning_research:0
+kbs_planning_research_desc:0
+kbs_recovery_research:0
+kbs_recovery_research_desc:0
+kbs_trade_school_efficiency:0
+kbs_trade_school_efficiency_desc:0
