--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -43,7 +43,7 @@
  ava_conspiring_chaos_desc:0 "TBA"
  ava_labor_union:0 "Labor Union"
  ava_labor_union_desc_desc:0 "TBA"
- ava_new_fiat_currency "Fiat Currency"
+ ava_new_fiat_currency:0 "Fiat Currency"
  ava_new_fiat_currency_desc:0 "Money Printer go Burr, Inflation is pain"
  ava_gold_transfer:0 "Gold for Land"
  ava_gold_transfer_desc:0 "The economic costs of suddenly integrating our old lands must be paid"
