--- a/localisation/KAS_l_english.yml
+++ b/localisation/KAS_l_english.yml
@@ -124,3 +124,102 @@
  kas_recovery_research_desc:0 "TBD"
  kas_trade_school_efficiency:0 "Trade Schools"
  kas_trade_school_efficiency_desc:0 "Wonder science is meaningless if we dont have the people trained to actually build it"
+ 
+ kas_unification_trouble:0 "Unification Troubles"
+ kas_unification_trouble_desc:0 "We've been a unified nation for only a year now. We need to forge better ties between our two halves if we're to succeed in this world."
+ kas_confederacy:0 "Confederacy"
+ kas_confederacy_desc:0 "Our current goal is to determine exactly what type of nation we want to have. We think that a confederation, with equal power between our various states, is the best way forward."
+ kas_democratic_constitution:0 "The Will of the People"
+ kas_democratic_constitution_desc:0 "Despite our rocky start as a military dictatorship we must listen to the people's will. We must turn our nation to the future and away from the mistakes of the past. "
+ 
+ kas_equal_languages:0 "Official Languages Act 1938"
+ kas_equal_languages_desc:0 "While the languages of Kobaulashlivi and Macehualuti are related, after combining our nations we must ensure that both have equal status beneath the law in our growing nation."
+ 
+ kas_reorganise_states:0 "Reorganize the States"
+ kas_reorganise_states_desc:0 "By reorganizing the current federal structures in our nation we can improve our understanding of where the people live, thus improving our taxes and our conscription rates"
+ 
+ kas_foreign_investment:0 "Open the Nation"
+ kas_foreign_investment_desc:0 "Foreign investments are likely to be exactly what our weak economy needs."
+ 
+ kas_rescind_claims:0 "Rescined French Claims"
+ kas_rescind_claims_desc:0 "The Kobaulashlivi Strip has been a serious point of contention between us and France for many years. Now is the time to renounce our claim on the area and improve our relations with Europe."
+ 
+ kas_university:0 "National Universities"
+ kas_university_desc:0 "To move our nation forward into the future we must improve our higher education."
+ 
+ kas_cede_gawete:0 "Cede the Gawete Strip"
+ kas_cede_gawete_desc:0 "When Europeans settled the sparsely populated Gawete Strip many years ago we protested and went to war. We will have more success if we cede this area back to the Europeans. It will show that we are an internationally minded nation."
+ 
+ kas_workers_union:0 "For the Worksers"
+ kas_workers_union_desc:0 " Until this point the workers have been oppressed by so many groups throughout our history. Now is the time to give the workers the power that they so richly deserve."
+ 
+ kas_people_rights:0 "the Peoples Council"
+ kas_people_rights_desc:0 "With Communism taking firm root in our nation we must ensure that the workers are adequately represented by Peoples Councils."
+ 
+ kas_standardise_rail:0 "Standardize the Railways"
+ kas_standardise_rail_desc:0"Because Kobaulashlivi and Macehualuti had two separate railway gauges there has been some difficulty integrating the nation's industrial areas."
+ 
+ kas_ban_politics:0 "Ban Political Parties"
+ kas_ban_politics_desc:0 "If our people are to benefit from Communism we must prevent them from being lead astray by dangerous foreign ideals."
+ 
+ kas_seize_forign_assets:0 "Seize Foriegn Property"
+ kas_seize_forign_assets_desc:0 " Foreign capitalists must not be able to act with impunity in our great nation."
+ 
+ kas_stratocracy:0 "A Military_Republic"
+ kas_stratocracy_desc:0 "Clearly the best way to ensure our success moving forward is to have the primacy of the military as the enforcement organ of the state"
+ 
+ kas_confirm_stratocracy:0 "Military Primacy"
+ kas_confirm_stratocracy_desc:0 " In order to ensure that the military is above all in our nation we will make it so that only veterans and currently serving members of the Armed Forces can vote."
+ 
+ kas_military_youth:0 "National Youth Programs"
+ kas_military_youth_desc:0 "If the members of the military are the only ones prepared to lead the nation then we must prepare the youth to become the soldiers of tomorrow."
+ 
+ kas_our_strength:0 "Our Strength"
+ kas_our_strength_desc:0 "We must now begin asserting our power upon our neighbors to keep our nation safe. Akamatuli is a good place to start."
+ 
+ kas_german_engineers:0 "Request Foriegn Aid"
+ kas_german_engineers_desc:0 "Surely there are other nations in the world which have made the same choices we have. We should petition them for aid in organizing ourselves."
+ 
+ kas_military_designs:0 "Military Designs"
+ kas_military_designs_desc:0 " We should request designs from our overseas benefactors which will help us in defending our interests here at home."
+ 
+ kas_franco_kash_war:0 "The Kobaulashlivi Strip"
+ kas_franco_kash_war_desc:0"Long time home to many Afro-Lemurian peoples, the Kobaulashlivi Strip is a former part of our nation that was taken from us by the French during their colonialist expansion on our continent. It is time to return it to its rightful owners.
+ 
+ kas_integrate_aka:0 "Akamatulian  Integration"
+ kas_integrate_aka_desc:0 "Akamatulian independence is a lie. We will bring them firmly under our control and into the nation, whether they want to or not."
+ 
+ kas_military_junta:0 "The Junta Will Prevail"
+ kas_military_junta_desc:0 "Only a few people in the military, primarily our top generals, understand the needs of the nation. Only a very few need to wield power for the good of the nation."
+ kas_the_generals:0 "The General Council"
+ kas_the_generals_desc:0 "Because of the shift in national power in our nation we now no longer need the imprimatur of the common man. Only the generals know what needs to be done, so only they will vote."
+ 
+ kas_miliary_expansion:0 "Military Expansion"
+ kas_miliary_expansion_desc:0 "The Council of Generals has decreed that the military must be increased for the benefit of the nation"
+ 
+ kas_miliary_expansion_2:0 "Military Expansion II"
+ kas_miliary_expansion_2_desc:0 "The Council has determined that more military bases are needed along our borders with neighboring nations."
+ 
+ kas_miliary_expansion_3:0 "Military Expansion III"
+ kas_miliary_expansion_3_desc:0 "With army and air bases established throughout the nation the Council has decided that our naval borders require significant investment."
+ 
+ kas_industrial_expansion:0 "Industrial Investments"
+ kas_industrial_expansion_desc:0 "The Council of Generals has determined that our nation requires a vast increase in our industrial capacity."
+ 
+ kas_industrial_expansion_2:0 "Industrial Investments II"
+ kas_industrial_expansion_2_desc:0 "We have only begun to expand our nation's capacity for producing the materiel needed by the Junta. The Council demands more!"
+ 
+ kas_industrial_expansion_3:0 "Industrial Investments III"
+ kas_industrial_expansion_3_desc:0 "We have almost completed the bare minimum necessary for the production needs of the nation. The Council requires one last national push from the people."
+ 
+ kas_tortoise_shell:0 "The Tortis Shell"
+ kas_tortoise_shell_desc:0 "Now that we have the military and industrial power to do so we must ensure that we are as strong as the tortoise, with a hard shell that deters would be predators."
+ 
+ kas_propganda:0 "The Power of Propaganda"
+ kas_propganda_desc:0 "In order to ensure the obedience and docility of the people we must create a system to educate the public on a massive scale."
+ 
+ kas_landlords:0 "The Landowners"
+ kas_landlords_desc:0 "With the societal changes we've been enacting its now time to take the land from the powerful landowners. They're sure to resist."
+ 
+ kas_university_complex:0 "National Research Complex"
+ kas_university_complex_desc:0 "Our nation needs to make use of the best and brightest minds to benefit the nation. We will create research complexes to further our technological development."
