--- a/localisation/KAS_l_english.yml
+++ b/localisation/KAS_l_english.yml
@@ -96,8 +96,8 @@
  kas_recently_unified_dem_com_desc:0 "TBD"
  kas_equal_language_idea:0 "Official Languages Act 1938" 
  kas_equal_language_idea_desc:0 "The Official Languages Act is a Kashvani law that came into force on September 9, 1938, which gives Kobalashiv and Macehautle equal status in the government of Kashvan. This makes them "official" languages, having preferred status in law over all other languages. Although the Official Languages Act is not the only piece of federal language law, it is the legislative keystone of Kashvan official bilingualism. Both languages are equal in Kashvan's government and in all the services it controls, such as the courts."
- kas_railway_standard_idea:0 "Railway Integration Act 1937"
- kas_railway_standard_idea_desc:0 "The Railway Integration Act 1937 is a Decree the Great Leader, that was designed to standardise railway tracks.  It mandated that the track gauge – which was the distance between the two running rails' inner faces 1,372 mm aka Four foot six inch to be the standard for Kasvan and for all railways to be converted to such. to beter integrate into each other as a compromise between Kobalashivs 1000mm Gauge and Macealashivi 1520mm."
+ kas_railway_standard_idea:0 "Railway Integration Act 1939"
+ kas_railway_standard_idea_desc:0 "The Railway Integration Act 1939 is a act of parliment, that was designed to standardise railway tracks.  It mandated that the track gauge – which was the distance between the two running rails' inner faces 1,372 mm aka Four foot six inch to be the standard for Kasvan and for all railways to be converted to such. to beter integrate into each other as a compromise between Kobalashivs 1000mm Gauge and Macealashivi 1520mm."
  kas_confederated_union:0 "Confederated Union"
  kas_confederated_union_desc:0 "TBH"
  kas_recently_unified_fac_oli:0 "Unified Military Comisart"
@@ -132,7 +132,7 @@
  kas_democratic_constitution:0 "The Will of the People"
  kas_democratic_constitution_desc:0 "Despite our rocky start as a military dictatorship we must listen to the people's will. We must turn our nation to the future and away from the mistakes of the past. "
  
- kas_equal_languages:0 "Official Languages Act 1938"
+ kas_equal_languages:0 "Minority Languages Act 1938"
  kas_equal_languages_desc:0 "While the languages of Kobaulashlivi and Macehualuti are related, after combining our nations we must ensure that both have equal status beneath the law in our growing nation."
  
  kas_reorganise_states:0 "Reorganize the States"
@@ -223,3 +223,42 @@
  
  kas_university_complex:0 "National Research Complex"
  kas_university_complex_desc:0 "Our nation needs to make use of the best and brightest minds to benefit the nation. We will create research complexes to further our technological development."
+ 
+ kas_language_stability:0 "Language Act of 1938
+ kas_language_stability_desc:0 "The time has come to decide the linguistic future of our nation."
+ 
+ kas_national_workforce:0 "National Work Corps
+ kas_national_workforce_desc:0 "We must create a corps of workers who will be the builders of our nation."
+ 
+ kas_national_road_maintenance:0 "National Road Maintenance"
+ kas_national_road_maintenance_desc:0 "The factories are important, but they will produce nothing if they get no materials. We must improve our national road system post-haste!"
+ 
+ kas_national_railway_project:0 "National Railways Project" 
+ kas_national_railway_project_desc:0 "If we are to industrialize and succeed we must have a functioning railway network that permeates the nation."
+ 
+ kas_capital_highway:0 "Shakwaram-Kasharaan Highway"
+ kas_capital_highway_desc:0 "We must connect our dual capitals together to allow the nation to benefit from industrialization and improve national governance."
+ 
+ kas_peoples_house:0 "National Peoples House"
+ kas_peoples_house_desc:0 "The representatives of our great nation need a beautiful building from which to minister to the nation."
+ 
+ kas_primary_education:0 "Compulsory Primary Education"
+ kas_primary_education_desc:0 "We must have a literate nation if we are to have any hope of succeeding in this modern world. A literate people will learn to solve some of their own problems instead of relying on the government."
+ 
+ kas_trade_schools:0 "Optional Trade Schools"
+ kas_trade_schools_desc:0 "Specialized workers can improve the speed and quality of our national output. Not everyone can become specialized, but a certain number are desireable."
+ 
+ kas_mace_navy:0 "Macehualuti Naval Integration"
+ kas_mace_navy_desc:0 "Macehualuti was always the Stronger Naval Power, Its plentiful deepwater ports allowed for a strong navy in our past. After Decades of Neglect, if we are to hope to challenge our rivals we must invest in this region"
+ 
+ kas_dockyard_estimations:0 "Dockyard Estimations"
+ kas_dockyard_estimations_desc:0 "Taking a Tour through along British Ports only heightens our fear that we are woefully behind the naval Game, We must Remedy this at once"
+ 
+ kas_dockyard_estimations_2:0 "TBD
+ kas_dockyard_estimations_2_Desc:0 "TBD"
+ 
+ kas_cruiser_effort:0 "Cruiser Research"
+ kas_cruiser_effort_desc:0 "While we have grasped the concepts required for Destroyers and Battleship the Humble Cruiser  have always alluded us in Purpose"
+ 
+ kas_koba_army:0 "Kobaulashlivi Land Integration"
+ kas_koba_army_desc:0 "Kobaulashlivi was the Stronger Land Power and she never let that strength go, We will need this strength to Challenge our Rivals and Enforce our will."
