--- a/localisation/KAS_l_english.yml
+++ b/localisation/KAS_l_english.yml
@@ -124,6 +124,8 @@
  kas_recovery_research_desc:0 "TBD"
  kas_trade_school_efficiency:0 "Trade Schools"
  kas_trade_school_efficiency_desc:0 "Wonder science is meaningless if we dont have the people trained to actually build it"
+ kas_turtles:0 "Iron Turtle"
+ kas_turtles_desc:0 "TBD"
  
  kas_unification_trouble:0 "Unification Troubles"
  kas_unification_trouble_desc:0 "We've been a unified nation for only a year now. We need to forge better ties between our two halves if we're to succeed in this world."
