--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -141,7 +141,7 @@
  AVA_british_research_university:0 "British Research University"
  AVA_british_research_university_desc:0 "Our population is sorely uneducated and illiterate, but by sending our best and brightest minds into a think tank with the british, we may be able to change that quite quickly.
  AVA_muzumdar_house:0 "Victory for Roya"
- AVA_muzumdar_house_desc:0 "'Roya, the heiress apparent to the throne, has secured victory over the interlopers that tried to steal the crown away from her. Using her naval forces and superior artillery, she has secured the surrender of her brother, the Houses, and many of the socialists. With our true Monarch in charge, the only future for Avahya is looking bright. All hail the Shahbanu.'
+ AVA_muzumdar_house_desc:0 "'Roya, the heiress apparent to the throne, has secured victory over the interlopers that tried to steal the crown away from her. Using her naval forces and superior artillery, she has secured the surrender of her brother, the Houses, and many of the socialists. With our true Monarch in charge, the only future for Avahya is looking bright. All hail the Shahbanu.'"
  AVA_purge_azadeh:0 "Purge House Azadeh"
  AVA_purge_azadeh_desc:0 "The Azadeh house was the main supporter of Parviz and his rebellion, whilst Parviz is long gone, many members of the Azadeh house remain, we must get rid of them to ensure the stability of the monarchy."
  AVA_purge_edibam:0 "Purge House Edibam"
